# AOCUtil

./: README.md  aoc.py  pyproject.toml
src/AOCRla/: __init__.py  __main__.py  aoc.py
