[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "AOCRla"
version = "0.1.1"
authors = [
  { name="Tony Rintala", email="rintala.tony@gmail.com" },
]
description = "A simple package to help with Advent of Code input downloads and result posting."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests==2.28.1",
    "loguru"
]
[project.urls]
"Homepage" = "https://github.com/tonyrla/AOCUtil"