[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
name = "AOCRla"
version = "0.3.0"
authors = [
  "Tony Rintala <rintala.tony@gmail.com>",
]
description = "A simple package to help with Advent of Code input downloads and result posting."
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.poetry.scripts]
aoc = "AOCRla:__main__.main"
aocr = "AOCRla:__main__.run"

[tool.poetry.dependencies]
python = ">=3.10"
requests = "^2.28.1"
loguru = "^0.5.3"
